# agenty

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  db-example.json  pyproject.toml
agents/: dyrektor-abw.md  dyrektor-szpitala.md  komendant-policji.md  komendant-psp.md  logistyk.md  marszalek-wojewodztwa.md  orchestrator.md  starosta.md  wojewoda.md  wojt.md
agents_kghm/: csirt-ot.md  czlonek-zarzadu-operacje.md  dyrektor-zuz.md  dyspozytor-ratownictwa.md  kierownik-ruchu-zakladu.md  lekarz-zakladowy.md  logistyk-kghm.md  orchestrator-kghm.md  rzecznik-kryzysowy.md  szef-ochrony.md
agenty/: __init__.py  agent.py  config.py  connection.py  context.py  mcp.py
agenty/api/: access_log.py  routes_incident_report.py  routes_orchestration.py  schemas.py  server.py
agenty/db/: __init__.py  models.py  mongo.py
agenty/mcp_gateway/: __init__.py  base.py  comms_mock.py  phone_call.py  resource_crud.py  scenario_gen.py
agenty/orchestration/: __init__.py  agent_phone_tool.py  agent_runner.py  agent_selector.py  agent_selector_kghm.py  crisis_graph.py  crisis_graph_state.py  crisis_workflow_nodes.py  engine.py  exceptions.py  hierarchy_service.py  incident_intake.py  models.py  reconciliation.py  repair_runs.py  repository.py  response_parsers.py  scenario_service.py  state_machine.py  tracing.py
examples/: repair_orchestration_runs.py  start_agent.py
tests/: test_agents_kghm.py
tests/orchestration/: test_agent_phone_tool.py  test_agent_selector.py  test_api_endpoint.py  test_api_server_integration.py  test_crisis_workflow_nodes.py  (+4 more)
