[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenty"
version = "0.1.0"
description = "CrisisTwin agent runtime (CGC LLM + extensible MCP hooks)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.0.0",
    "langgraph>=0.2.0",
    "openai>=1.59.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.6.0",
    "pymongo>=4.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: uses create_app(), Mongo, and LLM settings from .env (skipped when unset).",
]
